--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@xenova/transformers",
+  "name": "@amazejs/transformers",
   "version": "2.17.2",
   "description": "State-of-the-art Machine Learning for the web. Run 🤗 Transformers directly in your browser, with no need for a server!",
   "main": "./src/transformers.js",
@@ -38,9 +38,9 @@
   },
   "homepage": "https://github.com/xenova/transformers.js#readme",
   "dependencies": {
+    "@huggingface/jinja": "^0.2.2",
     "onnxruntime-web": "1.14.0",
-    "sharp": "^0.32.0",
-    "@huggingface/jinja": "^0.2.2"
+    "sharp": "^0.32.0"
   },
   "optionalDependencies": {
     "onnxruntime-node": "1.14.0"
@@ -52,6 +52,7 @@
     "jest": "^29.5.0",
     "jest-environment-node": "^29.5.0",
     "jsdoc-to-markdown": "^8.0.1",
+    "terser-webpack-plugin": "^5.3.10",
     "typescript": "^5.2.2",
     "wavefile": "^11.0.0",
     "webpack": "^5.80.0",
